<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <ImageView
        android:id="@+id/iv_act_splash_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/logo"
        android:layout_centerInParent="true"
        android:clickable="true"
        android:onClick="onClick"
        android:contentDescription="@string/app_name"
        />
    
    <TextView 
        android:id="@+id/tv_act_splash_app_name_black_face"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_black_face"
        android:layout_below="@+id/iv_act_splash_logo"
        android:textSize="40sp"
        />
    
    <TextView 
        android:id="@+id/tv_act_splash_app_name_weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/string_weather"
        android:layout_below="@+id/tv_act_splash_app_name_black_face"
        android:layout_alignParentRight="true"
        android:textSize="64sp"
        />
    
    <TextView 
        android:id="@+id/tv_act_splash_app_name_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        />
    

</RelativeLayout>
