<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#202020" >
    
    <LinearLayout
        android:id="@+id/rl_act_city_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView 
            android:id="@+id/tv_act_city_province"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_province_list"
            android:gravity="center"
            android:layout_weight="3"
            android:background="@drawable/btn_bg_more"
            android:clickable="true"
            android:textSize="14sp"
		    android:textColor="#FFFFFF"
            />

        <TextView
            android:id="@+id/tv_act_city_sub_city_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_sub_city_list"
            android:gravity="center"
            android:layout_weight="3"
            android:background="@drawable/btn_bg_more"
            android:clickable="true"
            android:textSize="14sp"
		    android:textColor="#FFFFFF"
            />
        
        <EditText
            android:id="@+id/et_act_city_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/string_sub_city_search"
            android:layout_weight="5"
            android:visibility="gone"
            android:background="@drawable/edit_bg"
            android:singleLine="true"
            android:maxLength="12"
            />
        <Button
            android:id="@+id/bt_act_city_search" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClick"
            android:visibility="gone"
			android:text="@string/string_search"            
            />
        <Button
            android:id="@+id/bt_act_city_controller" 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            />
    </LinearLayout>
    
    <GridView 
        android:id="@+id/gv_act_city_list"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_centerHorizontal="true"
	    android:numColumns="3"
	    android:textFilterEnabled="true"
	    android:stretchMode="columnWidth"
	    android:verticalSpacing="10dp"
		android:horizontalSpacing="10dp"
	    android:layout_below="@id/rl_act_city_container"
	    android:layout_marginTop="10dp"
	    android:listSelector="#00000000"
        android:background="#202020"
        />
    
    <ListView 
        android:id="@+id/lv_act_city_list"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:layout_centerHorizontal="true"
	    android:textFilterEnabled="true"
	    android:verticalSpacing="10dp"
	    android:layout_below="@id/rl_act_city_container"
	    android:layout_marginTop="10dp"
	    android:listSelector="#00000000"
	    android:cacheColorHint="#00000000"  
        android:background="#202020"
        android:visibility="gone"
        />
</RelativeLayout>
